added resume link

--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <a href="#" class="resume-btn" onclick="openResume()">
+            <a href="https://drive.google.com/file/d/1x-7AuTTJv-yA6HMBI5w3X8gWdHbgwXIZ/view?usp=sharing" class="resume-btn" onclick="openResume()">
                 <i class="fas fa-download"></i> Resume
             </a>
         </div>
@@ -1099,7 +1099,7 @@
         // Functions for buttons
         function openResume() {
             // Replace with your actual resume link  
-            window.open('YOUR_RESUME_LINK_HERE', '_blank');
+            window.open('https://drive.google.com/file/d/1x-7AuTTJv-yA6HMBI5w3X8gWdHbgwXIZ/view?usp=sharing', '_blank');
         }
 
         function openLeetCode() {
