--- a/index.html
+++ b/index.html
@@ -768,9 +768,9 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <a href="https://drive.google.com/file/d/1x-7AuTTJv-yA6HMBI5w3X8gWdHbgwXIZ/view?usp=sharing" class="resume-btn" onclick="openResume()">
+            <button class="resume-btn" onclick="openResume()">
                 <i class="fas fa-download"></i> Resume
-            </a>
+            </button>
         </div>
     </nav>
 
