fix: navigation bar

--- a/index.html
+++ b/index.html
@@ -763,9 +763,9 @@
             <div class="logo">DK</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <button class="resume-btn" onclick="openResume()">
@@ -774,7 +774,7 @@
         </div>
     </nav>
 
-    <section class="hero">
+    <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="floating">Draksha Khan</h1>
             <p class="role">
@@ -818,7 +818,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section id="skills" class="section">
         <h2>Technical Skills</h2>
         <div class="skills-grid">
             <div class="skill-category">
@@ -843,8 +843,6 @@
                     <span class="skill-tag">Redis</span>
                     <span class="skill-tag">KeyDB</span>
                     <span class="skill-tag">CouchDB</span>
-                    <span class="skill-tag">MongoDB</span>
-                    <span class="skill-tag">PostgreSQL</span>
                 </div>
             </div>
             
@@ -874,9 +872,9 @@
                 <h3><i class="fas fa-link"></i> Blockchain & Distributed Systems</h3>
                 <div class="skill-tags">
                     <span class="skill-tag">Hyperledger Fabric</span>
-                    <span class="skill-tag">Smart Contracts</span>
-                    <span class="skill-tag">Permissioned Blockchain</span>
                     <span class="skill-tag">CBDC</span>
+                    <span class="skill-tag">Permissioned Blockchain</span>
+                    <span class="skill-tag">Smart Contracts</span>
                 </div>
             </div>
             
@@ -890,7 +888,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section id="projects" class="section">
         <h2>Featured Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
@@ -984,7 +982,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section id="contact" class="section">
         <h2>Get In Touch</h2>
         <div class="contact-grid">
             <div class="contact-item">
