--- a/index.html
+++ b/index.html
@@ -272,8 +272,53 @@
             gap: 1rem;
             justify-content: center;
             flex-wrap: wrap;
-            opacity: 0;
+            opacity: 1;
             animation: fadeIn 1s ease-out 1.5s forwards;
+        }
+
+        .btn {
+            padding: 12px 30px;
+            background: transparent;
+            border: 2px solid #00ff41;
+            color: #00ff41;
+            text-decoration: none;
+            border-radius: 50px;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(0, 255, 65, 0.2), transparent);
+            transition: left 0.5s ease;
+        }
+
+        .btn:hover::before {
+            left: 100%;
+        }
+
+        .btn:hover {
+            background: rgba(77, 217, 96, 0.1);
+            color: #e0e0e0;
+            box-shadow: 0 0 20px rgba(77, 217, 96, 0.1);
+            transform: translateY(-2px);
+        }
+
+        .btn.secondary {
+            border-color: #00d4ff;
+            color: #00d4ff;
+        }
+
+        .btn.secondary:hover {
+            background: rgba(77, 191, 217, 0.1);
+            color: #e0e0e0;
+            box-shadow: 0 0 20px rgba(77, 191, 217, 0.1);
         }
 
         /* Hero Section */
