added padding to buttons

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
             flex-wrap: wrap;
             opacity: 1;
             animation: fadeIn 1s ease-out 1.5s forwards;
+            padding-top: 3rem;
         }
 
         .btn {
