Added Updated resume link and removed unnecessary comments

--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
             setTimeout(typeRole, typeSpeed);
         }
 
-        // Start typing animation
+        // typing animation
         setTimeout(typeRole, 1000);
 
         // Smooth scrolling for navigation
@@ -1117,7 +1117,7 @@
             });
         });
 
-        // Add scroll animations
+        // scroll animations
         const observerOptions = {
             threshold: 0.1,
             rootMargin: '0px 0px -50px 0px'
@@ -1142,15 +1142,15 @@
 
         // Functions for buttons
         function openResume() {
-            // Replace with your actual resume link  
-            window.open('https://drive.google.com/file/d/1x-7AuTTJv-yA6HMBI5w3X8gWdHbgwXIZ/view?usp=sharing', '_blank');
+            // resume link  
+            window.open('https://drive.google.com/file/d/1EuawqLQUnrOJB-84yhti7MhhVAAIrSjo/view?usp=sharing', '_blank');
         }
 
         function openLeetCode() {
             window.open('https://leetcode.com/u/Draksha22/', '_blank');
         }
 
-        // Add sparkle effect on mouse move
+        // sparkle effect on mouse move
         document.addEventListener('mousemove', (e) => {
             if (Math.random() > 0.95) {
                 createSparkle(e.clientX, e.clientY);
@@ -1177,7 +1177,7 @@
             }, 1000);
         }
 
-        // Add sparkle animation
+        // sparkle animation
         const style = document.createElement('style');
         style.textContent = `
             @keyframes sparkle {
